# onote

./: .gitignore  CLAUDE.md  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2025-01-02-ghostnote-design.md  2025-12-31-opnotes-design.md  theme-system-plan.md
src/: App.svelte
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: audio.rs  mod.rs  notes.rs  settings.rs  vault.rs  whisper.rs
src/lib/components/: ConfirmDialog.svelte  Editor.svelte  KeyboardShortcuts.svelte  LockScreen.svelte  NoteList.svelte  Settings.svelte  SetupWizard.svelte  Sidebar.svelte  StatusBar.svelte  Toolbar.svelte
src/lib/stores/: confirm.svelte.ts  editor.svelte.ts  notes.svelte.ts  recording.svelte.ts  vault.svelte.ts
src/lib/utils/: tauri-commands.ts
